# Rascal

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  bacon.toml  output.swf
crates/as2/: Cargo.toml
crates/as2/src/: ast.rs  error.rs  global_types.rs  hir.rs  lexer.rs  lib.rs  parser.rs  program.rs  resolver.rs
crates/as2/src/lexer/: operator.rs  tests.rs  tokens.rs
crates/as2/src/parser/: class.rs  document.rs  error.rs  expression.rs  operator.rs  statement.rs  tests.rs
crates/as2/src/resolver/: special_functions.rs
crates/as2/src/snapshots/: rascal_as2__program__tests__all_samples@AnEmptyInterface.as.snap  rascal_as2__program__tests__all_samples@AnExtendingInterface.as.snap  rascal_as2__program__tests__all_samples@ClassMembersTest.as.snap  rascal_as2__program__tests__all_samples@Constructor.as.snap  rascal_as2__program__tests__all_samples@DynamicClass.as.snap  rascal_as2__program__tests__all_samples@EmptyClass.as.snap  rascal_as2__program__tests__all_samples@MtascStyle.as.snap  rascal_as2__program__tests__all_samples@NotMtascStyle.as.snap  rascal_as2__program__tests__all_samples@assign_variable_and_trace.as.snap  rascal_as2__program__tests__all_samples@assign_variable_many_ways.as.snap  rascal_as2__program__tests__all_samples@block.as.snap  rascal_as2__program__tests__all_samples@comments.as.snap  rascal_as2__program__tests__all_samples@delete.as.snap  rascal_as2__program__tests__all_samples@for_loop.as.snap  rascal_as2__program__tests__all_samples@function.as.snap  rascal_as2__program__tests__all_samples@function_hoisting.as.snap  rascal_as2__program__tests__all_samples@function_in_loop_break_continue.as.snap  rascal_as2__program__tests__all_samples@if_else.as.snap  rascal_as2__program__tests__all_samples@if_frame_loaded.as.snap  rascal_as2__program__tests__all_samples@import_affects_functions.as.snap  rascal_as2__program__tests__all_samples@inline_pcode.as.snap  rascal_as2__program__tests__all_samples@legacy_get_set.as.snap  rascal_as2__program__tests__all_samples@legacy_operators.as.snap  rascal_as2__program__tests__all_samples@nested_break_continue.as.snap  rascal_as2__program__tests__all_samples@nested_for_break_continue.as.snap  rascal_as2__program__tests__all_samples@numbers.as.snap  rascal_as2__program__tests__all_samples@objects.as.snap  rascal_as2__program__tests__all_samples@op_precedence__add_sub.as.snap  rascal_as2__program__tests__all_samples@op_precedence__bit_math.as.snap  rascal_as2__program__tests__all_samples@op_precedence__bit_shifts.as.snap  rascal_as2__program__tests__all_samples@op_precedence__comparison.as.snap  rascal_as2__program__tests__all_samples@op_precedence__equality.as.snap  rascal_as2__program__tests__all_samples@op_precedence__general.as.snap  rascal_as2__program__tests__all_samples@op_precedence__inc_dec.as.snap  rascal_as2__program__tests__all_samples@op_precedence__logic.as.snap  rascal_as2__program__tests__all_samples@op_precedence__mul_div_mod.as.snap  rascal_as2__program__tests__all_samples@op_precedence__typeof.as.snap  rascal_as2__program__tests__all_samples@operators.as.snap  rascal_as2__program__tests__all_samples@random_success.as.snap  rascal_as2__program__tests__all_samples@regressions__ruffle_avm1_edittext_drag_select.as.snap  (+62 more)
crates/as2_codegen/: Cargo.toml
crates/as2_codegen/fail_samples/: chr.as  duplicateMovieClip.as  fscommand.as  getproperty.as  gettimer.as  geturl.as  gotoandplay.as  gotoandstop.as  length.as  loadmovie.as  loadvariablesnum.as  mblength.as  mbord.as  nextframe.as  ord.as  play.as  prevscene.as  printasbitmap.as  random.as  removemovieclip.as  setproperty.as  stopallsounds.as  string.as  substring.as  togglehighquality.as  unloadmovie.as
crates/as2_codegen/src/: access.rs  builder.rs  constants.rs  context.rs  error.rs  lib.rs  special_functions.rs  statement.rs  tests.rs
crates/as2_codegen/src/snapshots/: rascal_as2_codegen__tests__all_samples@AnEmptyInterface.as.snap  rascal_as2_codegen__tests__all_samples@AnExtendingInterface.as.snap  rascal_as2_codegen__tests__all_samples@ClassMembersTest.as.snap  rascal_as2_codegen__tests__all_samples@Constructor.as.snap  rascal_as2_codegen__tests__all_samples@DynamicClass.as.snap  rascal_as2_codegen__tests__all_samples@EmptyClass.as.snap  rascal_as2_codegen__tests__all_samples@MtascStyle.as.snap  rascal_as2_codegen__tests__all_samples@NotMtascStyle.as.snap  rascal_as2_codegen__tests__all_samples@assign_variable_and_trace.as.snap  rascal_as2_codegen__tests__all_samples@assign_variable_many_ways.as.snap  rascal_as2_codegen__tests__all_samples@block.as.snap  rascal_as2_codegen__tests__all_samples@comments.as.snap  rascal_as2_codegen__tests__all_samples@delete.as.snap  rascal_as2_codegen__tests__all_samples@for_loop.as.snap  rascal_as2_codegen__tests__all_samples@function.as.snap  rascal_as2_codegen__tests__all_samples@function_hoisting.as.snap  rascal_as2_codegen__tests__all_samples@function_in_loop_break_continue.as.snap  rascal_as2_codegen__tests__all_samples@if_else.as.snap  rascal_as2_codegen__tests__all_samples@if_frame_loaded.as.snap  rascal_as2_codegen__tests__all_samples@import_affects_functions.as.snap  rascal_as2_codegen__tests__all_samples@inline_pcode.as.snap  rascal_as2_codegen__tests__all_samples@legacy_get_set.as.snap  rascal_as2_codegen__tests__all_samples@legacy_operators.as.snap  rascal_as2_codegen__tests__all_samples@nested_break_continue.as.snap  rascal_as2_codegen__tests__all_samples@nested_for_break_continue.as.snap  rascal_as2_codegen__tests__all_samples@numbers.as.snap  rascal_as2_codegen__tests__all_samples@objects.as.snap  rascal_as2_codegen__tests__all_samples@op_precedence__add_sub.as.snap  (+129 more)
crates/as2_pcode/: Cargo.toml
crates/as2_pcode/src/: codegen.rs  lexer.rs  lib.rs  parser.rs  pcode.rs  swf.rs
crates/as2_pcode/src/codegen/: access.rs  (+4 more)
crates/cli/: CHANGELOG.md  Cargo.toml
crates/cli/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  span.rs
crates/rascal/: CHANGELOG.md  Cargo.toml
crates/rascal/src/: error.rs  internal.rs  lib.rs  program.rs  provider.rs  sources.rs  swf.rs  tests.rs
(+915 files in other folders)
