[package]
name = "ruasc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
winnow = "0.7.13"
serde = { version = "1.0.228", features = ["derive"] }
annotate-snippets = "0.12.8"

[dev-dependencies]
insta = { version = "1.43.2", features = ["yaml"] }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
