[workspace]
members = [
    "crates/as2",
    "crates/as2_codegen",
    "crates/as2_pcode",
    "crates/cli",
    "crates/common"
]
default-members = ["crates/cli"]
resolver = "3"

[workspace.package]
authors = ["Nathan Adams <dinnerbone@dinnerbone.com>"]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
