[workspace]
members = [
    "crates/cli",
    "crates/rascal"
]
default-members = ["crates/cli"]
resolver = "3"

[workspace.package]
authors = ["Nathan Adams <dinnerbone@dinnerbone.com>"]
version = "0.2.4"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Dinnerbone/Rascal"
keywords = ["actionscript", "flash", "swf"]
description = "A parser and compiler for Flash ActionScript 2 files into SWFs"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
