[package]
name = "ruasc_as2_codegen"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
ruasc_as2 = { path = "../as2" }
ruasc_as2_pcode = { path = "../as2_pcode" }

[dev-dependencies]
insta = { version = "1.43.2", features = ["yaml", "glob"] }

[features]
default = []
