[package]
name = "rascal_as2_codegen"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
rascal_as2 = { path = "../as2" }
rascal_as2_pcode = { path = "../as2_pcode" }
rascal_common = { path = "../common" }
annotate-snippets = "0.12.8"

[dev-dependencies]
insta = { version = "1.43.2", features = ["yaml", "glob"] }

[features]
default = []
