[package]
name = "rascal_as2_codegen"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
rascal_as2 = { path = "../as2" }
rascal_as2_pcode = { path = "../as2_pcode" }

[dev-dependencies]
insta = { version = "1.47.2", features = ["yaml", "glob"] }

[features]
default = []
