[package]
name = "ruasc_as2_pcode"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
winnow = "0.7.13"
serde = { version = "1.0.228", features = ["derive"] }
ruasc_as2 = { path = "../as2" }
annotate-snippets = "0.12.8"
indexmap = { version = "2.12.0", features = ["serde"] }

[dev-dependencies]
insta = { version = "1.43.2", features = ["yaml", "glob"] }

[features]
default = []
winnow-debug = ["winnow/debug"]
