[package]
name = "rascal_as2_pcode"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true
keywords.workspace = true
description.workspace = true
publish = false

[dependencies]
winnow = "1.0.1"
serde = { version = "1.0.228", features = ["derive"] }
annotate-snippets = "0.12.12"
indexmap = { version = "2.14.0", features = ["serde"] }
rascal_common = { path = "../common" }

[dev-dependencies]
insta = { version = "1.47.2", features = ["yaml", "glob"] }

[features]
default = []
winnow-debug = ["winnow/debug"]
