[package]
name = "rascal_cli"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rascal = { path = "../rascal" }

[features]
default = []
winnow-debug = ["rascal/winnow-debug"]
