[package]
name = "rascal_cli"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true
keywords.workspace = true
description.workspace = true
categories = ["compilers", "parser-implementations", "command-line-utilities"]

[[bin]]
name = "rascal"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rascal = { path = "../rascal", version = "0.2.2" }

[features]
default = []
winnow-debug = ["rascal/winnow-debug"]
