[package]
name = "rascal_common"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
winnow = "1.0.1"
serde = { version = "1.0.228", features = ["derive"] }
annotate-snippets = "0.12.12"
indexmap = { version = "2.12.0", features = ["serde"] }
swf = "0.2.2"
byteorder = "1.5.0"

[dev-dependencies]
insta = { version = "1.47.2", features = ["yaml", "glob"] }

[features]
default = []
winnow-debug = ["winnow/debug"]
