[package]
name = "rascal_common"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true
keywords.workspace = true
description.workspace = true
publish = false

[dependencies]
winnow = "1.0.1"
serde = { version = "1.0.228", features = ["derive"] }

[features]
default = []
winnow-debug = ["winnow/debug"]
