[package]
name = "rascal"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
description.workspace = true
categories = ["compilers", "parser-implementations"]

[dependencies]
indexmap = { version = "2.14.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
annotate-snippets = "0.12.15"
byteorder = "1.5.0"
swf = "0.2.2"
winnow = "1.0.2"

[dev-dependencies]
insta = { version = "1.47.2", features = ["yaml", "glob"] }

[features]
default = []
winnow-debug = ["winnow/debug"]
